# asc

./: .gitignore  .gitmodules  CMakeLists.txt  MultipleSlowConstantRounds.csv  OneRound.csv  README.md  TODOS.txt  Toolchain.cmake  build.sh  build.zig  build.zig.zon  build_in_container.sh  deploy_raspi.sh  export.sh  main  multiple_wlans_raspi.txt  plot.py  run.sh  sdkconfig  sdkconfig.old  sync_sysroot.sh
build_container/: Dockerfile  TC-raspi.cmake  commands.txt
client/: CMakeLists.txt  client.zig  commands_pb2.py  console.zig  gui.zig  headingToPosition.zig  main.cpp  main.py  main.zig  netClient.zig  plot.zig  trackMapPlot.zig
controller/: CMakeLists.txt  avgVelDistanceMeter.zig  bmi.c  bmi.h  bmi.zig  bno.zig  commands.pb.cc  commands.pb.h  config.zig  controller.zig  controllerState.zig  distanceMeter.zig  i2c.zig  kalmanFilter.zig  main.cpp  main.zig  mapTrack.zig  matrixUtils.zig  netServer.zig  pwm.c  pwm.h  rtos.c  rtos.h  rtosBindings.c  selfDrive.zig  server.c  server.h  stop.zig  tacho.zig  uart.c  uart.h  uartConsole.zig  userDrive.zig  utils.c  utils.h  utils.zig  wifi.c
controller/c/: bmi.c  i2c.c  i2c.h  pcnt.c  pcnt.h  pcntManual.c  pt.c  pt.h  rmt.c  rmt.h  wifi.h
controller/controllerStates/: controllerState.zig  mapTrack.zig  optimalSelfDrive.zig  selfDrive.zig  stop.zig  userDrive.zig
controller/icm20948/: build.zig  build.zig.zon
controller/icm20948/src/: icm.zig  main.zig
controller/icp/: icp.zig  main.zig
controller/kdTree/: kdTree.zig  node.zig  point.zig  quickselect.zig
controller/positioningTest/: build.zig  build.zig.zon
controller/positioningTest/src/: controller.zig  gui.zig  main.zig  plot.zig  ringBuffer.zig  simulation.zig  track.zig  trackMapPlot.zig  trackPoint.zig
cross-compiled-libs/pigpio/: libpigpio.so.1  libpigpiod_if2.so.1
cross_compiled_libs/libczmq/: libczmq.la  libczmq.so.4.2.2
cross_compiled_libs/libzmq/: libzmq.la  libzmq.so.5.2.6
cross_compiled_libs/libzmq/pkgconfig/: libczmq.pc  libzmq.pc
cross_compiled_libs/pigpio/: libpigpiod_if.so.1
doc/: cross_compilation.md  setup_raspberry_pi.md
libs/build_container/: Dockerfile  build_zmq.sh  commands.txt
main/: CMakeLists.txt
proto/: commands.proto
shared/: clientContract.zig  serverContract.zig
shared/commandParser/: commandParser.zig  commandParserUtils.zig  lexer.zig
shared/config/: config.zig
shared/icm20948/src/: icm.zig  main.zig
shared/icp/: icp.zig
shared/kdTree/: kdTree.zig  point.zig  quickselect.zig
shared/matrix/: matrix.zig
shared/messageFormat/: decode.zig  encode.zig  message.zig  messageFormat.zig  shared.zig  testContract.zig  testEncodeDecode.zig
shared/messageFormatTest/: build.zig  build.zig.zon
shared/messageFormatTest/src/: decode.zig  encode.zig  main.zig
shared/track/: track.zig  trackPoint.zig
shared/vector/: vector.zig
src/: main.cpp  main.zig  pigpio_test.cpp  zmq_server.zig
src/client/pyvenv/: pyvenv.cfg
src/zigpio/: pigpio_bindings.zig
toolchain_config_ct_ng/: .config
toolchain_config_raspi/: .config
